# trading_app

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD.md  DEPLOYMENT.md  Dockerfile  FULL_AUDIT_2026_03_03.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/dashboard/: alert_notifier.py  alert_runner.py  build_dashboard.py  config_loader.py  data_exporter.py  figures.py  figures_indicators.py  figures_layout.py  refresh_dashboard.py  screener_builder.py  sector_map.py  serve_dashboard.py  signal_logger.py  stock_export.py  strategy.py  templates.py  trades.py
apps/screener/: SCREENER.md  __init__.py  _build_universe.py  daily_screener.py  lean_enrichment.py  scan_enrichment.py  scan_strategy.py  seed_universe.py  universe.py
data/: trades.db
deploy/: trading-dashboard-test-scan.service
docs/: 2-bar sequence test.rtf  INFRA_PLAN.md  architecture_audit.md  changelog.md  changelog_2026_03.md  chart_render_spec.md  pine_to_python_mapping.md  screener.md  strategy_audit.md  strategy_changes.md  strategy_pipeline_design.md
infra/: deploy-prod.sh  deploy-staging.sh  nginx.conf  trading-dashboard-test-scan.service  trading-dashboard-test-scan.timer  trading-dashboard-test.service  trading-dashboard.service
research/: README.md
research/industry_analysis/: best_combos_by_sector.py  kpi_by_sector.py
research/kpi_optimization/: MEMORY_GUIDELINES.md  PHASE20B_PLAN.md  PHASE20C_PLAN.md  PHASE20_PLAN.md  STRATEGY.md  __init__.py  fetch_sample300.py  gate_overlap_test.py  phase11v10_breakout_combos.py  phase11v11_golden_score.py  phase11v12_sector_combos.py  phase11v13_sector_optimizer.py  phase11v14_walkforward.py  phase11v7_exitv4_hr65.py  phase11v8_param_sweep.py  phase11v9_unified_position.py  phase12_strategy_improvements.py  phase12b_entry_confirmation.py  phase12c_volatility_sizing.py  phase12d_breakeven_stop.py  phase12e_entry_filters.py  phase13_screener_quality.py  phase14_entry_quality.py  phase15_entry_delay.py  phase16_pf_optimization.py  phase17_charts.py  phase17_step0_audit.py  phase17_strategy_archetypes.py  phase18_master.py  phase18_reenrich.py  phase18_supplement.py  phase19_mtf.py  phase20_master.py  phase20b_master.py  phase20c_1d_entry_1w_exit.py  phase8_exit_by_sector.py  tf_config.py  visualize_results.py
research/optimization/: __init__.py  objective.py  sampler.py  search.py
research/p20_drytest/: README.md  p20_drytest.py  p20_drytest_results.json
research/sample_universe/: sample_300.csv  sample_meta.json
scripts/: audit_dashboard.py  browser_check.py
tests/: conftest.py  test_config_loader.py  test_data_pipeline.py  test_indicators.py  test_server_endpoints.py  test_smoke.py  test_strategy.py  test_trade_parity.py
tests/playwright/: conftest.py  test_chart.py  test_dashboard.py  test_screener.py
trading_dashboard/: __main__.py  cli.py
trading_dashboard/data/: __init__.py  benchmark.py  downloader.py  enrichment.py  health.py  incremental.py  store.py
trading_dashboard/indicators/: __init__.py  _base.py  _pine_mapping.md  _template.py  adx.py  atr_stop.py  bollinger.py  breakout_targets.py  cci_chop_bb.py  crsi.py  donchian.py  gk_trend_ribbon.py  gmma.py  ichimoku.py  impulse_trend.py  luxalgo_normalized.py  ma_ribbon.py  macd.py  madrid.py  mansfield_rs.py  nadaraya_watson.py  obv.py  price_action_index.py  psar.py  registry.py  risk_indicator.py  rsi_zeiierman.py  smi.py  squeeze.py  sr_breaks_retests.py  supertrend.py  turtle.py  ut_bot.py  wavetrend.py  wt_mtf_signal.py
trading_dashboard/kpis/: __init__.py  catalog.py  rules.py
trading_dashboard/symbols/: __init__.py  manager.py
trading_dashboard/utils/: __init__.py  pine_rtf.py
(+1116 files in other folders)
