[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-dashboard"
version = "0.1.0"
description = "Multi-timeframe trading dashboard with KPI-based strategy engine"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<2.0",
    "plotly>=5.18,<6.0",
    "yfinance>=0.2.31,<0.3",
    "matplotlib>=3.8,<4.0",
    "reportlab>=4.0,<5.0",
    "requests>=2.31,<3.0",
    "pyarrow>=14.0,<18.0",
    "numba>=0.59,<0.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-cov>=4.1,<6.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
trading-dashboard = "trading_dashboard.cli:main"

[tool.setuptools.packages.find]
include = ["trading_dashboard*", "apps*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
base_url = "http://localhost:8051"

[tool.coverage.run]
source = ["trading_dashboard", "apps"]
omit = ["*/research/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 30

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"apps/dashboard/serve_dashboard.py" = ["E402"]
"apps/dashboard/data_exporter.py" = ["E402"]
"apps/dashboard/templates.py" = ["E402"]
"apps/screener/daily_screener.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
